kata-deploy: Use a RKE2 capable image
Let's point to a custom image that supports RKE2, while that change
doesn't land upstream.

Signed-off-by: Fabiano Fidêncio <fabiano@fidencio.org>

--- a/src/runtime/Makefile
+++ b/src/runtime/Makefile
@@ -174,7 +174,7 @@ DEFVALIDENTROPYSOURCES := [\"/dev/urandom\",\"/dev/random\",\"\"]
 
 DEFDISABLEBLOCK := false
 DEFSHAREDFS_CLH_VIRTIOFS := virtio-fs
-DEFSHAREDFS_QEMU_VIRTIOFS := virtio-fs
+DEFSHAREDFS_QEMU_VIRTIOFS := virtio-9p
 DEFVIRTIOFSDAEMON := $(LIBEXECDIR)/kata-qemu/virtiofsd
 DEFVALIDVIRTIOFSDAEMONPATHS := [\"$(DEFVIRTIOFSDAEMON)\"]
 # Default DAX mapping cache size in MiB
