kata-deploy: Point to the new image with 32bits support
The new image has support to the max_defaultmemory, and has it set to 1.5GB.

Signed-off-by: Fabiano Fidêncio <fabiano@fidencio.org>

--- a/tools/packaging/kata-deploy/kata-deploy/base/kata-deploy.yaml
+++ b/tools/packaging/kata-deploy/kata-deploy/base/kata-deploy.yaml
@@ -16,7 +16,7 @@ spec:
       serviceAccountName: kata-label-node
       containers:
       - name: kube-kata
-        image: quay.io/fidencio/kata-deploy:2.4.0-with-32-bits-support
+        image: quay.io/fidencio/kata-deploy:2.4.0-with-32-bits-support-v1
         imagePullPolicy: Always
         lifecycle:
           preStop:
